--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {    
-    background-color: #00ff00;
+    background-color: #000000;
     color: #0000ff;
     font-family: Times New Roman, sans-serif;
 
