--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {    
     background-color: #000000;
     color: #0000ff;
-    font-family: Comic Sans MS, sans-serif;
+    font-family: "Comic Sans MS", "Comic Sans", cursive, sans-serif;
 
 }
 h1 {
